<resources>
    <string name="app_name">Asado</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="change_to_login_text">Already registered?</string>
    <string name="change_to_register_text">Don\'t have an account yet?</string>
    <string name="change_to_login_link"><a href="">Sign in</a></string>
    <string name="change_to_register_link"><a href="">Register</a></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_courses_and_events">MyCoursesAndEventsActivity</string>
    <string name="tab_text_1">Mis Cursos</string>
    <string name="tab_text_2">Eventos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Salir</string>
</resources>
